# CityEnergyAnalyst

./: .coderabbit.yaml  .dockerignore  .doit.db  .gitignore  .gitignore.orig  .spyderproject  AGENT.md  AGENTS.md  AUTHORS.md  CHANGELOG.md  CODECONVENTIONS.md  CREDITS.md  City Energy Analyst.HeatmapsTool.pyt.xml  City Energy Analyst.PropertiesTool.pyt.xml  City Energy Analyst.pyt  City Energy Analyst.pyt.xml  Dockerfile  Jenkinsfile  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README.md  README.rst  THERMAL_NETWORK_DOCUMENTATION_INDEX.md  THERMAL_NETWORK_REFACTORING_GUIDE.md  THERMAL_NETWORK_VS_COSTS_ANALYSIS.md  VARIABLES.md  acknowledgements_and_third_party_copyrights.md  building_info.csv  building_info.xlsx  cea.py  conda-lock.yml  environment.cea-3.5.0b2.yml  environment.cea-3.5.0b3.yml  environment.cea-3.5.0b4.yml  environment.cea-3.5.0b5.yml  environment.cea-3.5.0b6.yml  environment.cea-3.5.0b7.yml  environment.cea-3.5.0b8.yml  (+23 more)
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: build-external-tools.yml  ci.yml  conda_lock.yml  docker.yml  linter.yml  main.yml  notify-cea-website.yml  pull.request.yml  setup_build.yml  update-config-stubs.yml
cea/: AGENTS.md  B11515811T.csv  B140556T.csv  B140557T.csv  B140558T.csv  B140559T.csv  B140560T.csv  B140561T.csv  B140562T.csv  B140564T.csv  B140567T.csv  B140568T.csv  B140570T.csv  B140571T.csv  B140573T.csv  B140574T.csv  B140575T.csv  B140576T.csv  B140577T.csv  B140578T.csv  B140580T.csv  B140581T.csv  B140582T.csv  B140583T.csv  B140584T.csv  B140585T.csv  B140586T.csv  B140588T.csv  B140589T.csv  B140590T.csv  B140591T.csv  B153690T.csv  B153691T.csv  B153692T.csv  B153693T.csv  B153694T.csv  B153695T.csv  B153696T.csv  B153697T.csv  B153700T.csv  (+290 more)
cea/GUI/: City Energy Analyst.pyt  benchmark_graphs_tool.py  data_helper_tool.py  demand_graphs_tool.py  demand_tool.py  embodied_energy_tool.py  emissions_tool.py  heatmaps_tool.py  inputlocator.py  mobility_tool.py  radiation_tool.py  scenario_plots_tool.py  toolbox.py
cea/analysis/: benchmark.py  embodied.py  embodied_BACKUP_6972.py  embodied_BASE_6972.py  embodied_REMOTE_6972.py  emissions.py  mcda.py  mobility.py  morris.py  operation.py  operation_costs.py  parameter-screening.py  senstivity_demand.py
cea/concept_project/: .gitignore  .gitmodules  README.md  concept_parameters.py  config.py  constants.py  electrical_grid_calculations.py  electrical_thermal_optimization_main.py  electrical_thermal_optimization_script.py  get_initial_network.py  main.py  (+7 more)
contributions/: reporting.py
doc/: conf.py  index.rst
docker/: Dockerfile  README.md  cea.config  environment.yml
docker/server/: CMakeLists.txt  Dockerfile  cea.config  environment.yml  imports.py
docs/: CEA-RTD.mm  How-to-document-cea.rst  Makefile  Metadatabase.xlsx  activities.rst  agile-with-CEA.rst  archetypes.rst  building-properties.rst  building-schedules.rst  cascading-configuration-files.rst  cea-workflow-guide.rst  cite.rst  codes_ref.rst  communication.rst  conf.py  config-file-guide.rst  configuration-file-details.rst  dashboard.rst  databases.rst  default_databases.csv  developer-walk-through.rst  disclaimer.rst  documentation-brainstorm.rst  documentation-guide.rst  emission-systems.rst  energy-systems.rst  envelope-systems.rst  environment.yml  environment.yml.orig  execution-time.xls  files-generated-by-the-cea.rst  flowchart_MPC_building.rst  folder-structure.rst  getting-started.rst  getting_started.rst  glossary.rst  glossary_autogen.py  guide-to-variable-naming-in-CEA.rst  guide_about_files_generated.html  guide_about_files_generated.md  (+74 more)
euler/: README.md  analyze-simulations.sh  create-samples.sh  run-demand-bsub.sh  run-demand.sh
examples/: README.md
install/: mac_installation.sh
legacy/: Readme.md
notebooks/: 1625-figure-out-why-the-radiation-daysim-tool-hangs-on-sabines-scenario.ipynb  1986-add-plots-comparisons-to-dashboard.ipynb  2020.02.25-create-tables-entity-relationship-diagram  2020.02.25-create-tables-entity-relationship-diagram.ipynb  2200-remove-naming-csv.ipynb  2584-migration-script.ipynb  2637-single-point-of-reference-for-variables.ipynb  2716-cea-plugin-architecture.ipynb  2745-compare-scenarios.ipynb  2783-compare-scenarios.ipynb  Compare cli.config to scripts.yml.ipynb  Create a dashboard.yml for all plots.ipynb  NUS-weather-file-processing.ipynb  Untitled.ipynb  data cleaning.ipynb  extract_inputlocator_calls.ipynb  rc_model_temperatures.ipynb  update_glossary.ipynb  update_schemas_yml.ipynb
scripts/: README.md  config_type_generator.py  generate_tutorial_glossary.py
setup/: README.md  Setup_CEAforArcGIS.iss  activate.bat  build-dependencies.bat  cea-env-run.bat  cea-env.bat  cealib.pth  cityenergyanalyst.nsi  cmder-config.bat  copy_library.bat  copy_library.py  dashboard.bat  esri104.yml  get_version.nsi  mac_installation.sh  pip-install-cea.bat  pip-install.bat  update.py
test/: properties.cprofile
tests/: .doit.db  __init__.py  compare_hq_baseline_masterplan.py  create_unittest_data.py  dodo.py  integration_test.py  jenkins.bat  run_all_plots.py  test_calc_thermal_loads.config  test_calc_thermal_loads.py  test_calc_thermal_loads_new_ventilation.py  test_check_for_radiation_input_in_demand_script.py  test_district_cooling.config  test_helpers.py  test_inputs_setup_workflow.py  test_schedules.py  test_sensible_loads.py  test_technologies.py  workflow_medium.yml  workflow_quick.yml
urban_design/: CEA data-helper.ghuser  CEA demand.ghuser  CEA radiation-daysim.ghuser  create-scenario-from-excel-files.bat  create-scenario-from-excel-files.rst  crs_raster_json.py  dbf_age.py  dbf_architecutre.py  dbf_occupancy.py  folder_scenarios.py  i665_170727.gh  py_write.py  shp_district.py  shp_zone.py  trial_call_to_run.py  trial_make_scenario_folders.py  trial_random.py  trial_write_csv.py  trial_write_dbf.py  trial_write_py.py  urban_design.gh  zone_shp.py
validation/: Dummy_File_Lenny.csv  dummy.ods  dummy.py
wp1/: Test_LOD2.5.gml  Test_run_for_clipping.3dm  UBG_CityGML_2 patterns.gh
(+4974 files in other folders)
